change to chinese char

--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
       <button class="tab" data-tab="matches">🏆 比赛记录</button>
       <button class="tab" data-tab="add-match">➕ 添加比赛</button>
       <button class="tab" data-tab="players">👥 选手管理</button>
-      <button class="tab" data-tab="news">📰 News</button>
+      <button class="tab" data-tab="news">📰 新闻</button>
     </div>
 
     <!-- Rankings Panel -->
@@ -764,9 +764,9 @@
     <!-- News Panel -->
     <div id="news" class="panel">
       <div class="card">
-        <h2>📰 ATP/WTA Live Scores</h2>
+        <h2>📰 ATP/WTA 即时比分</h2>
         <div class="news-header" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
-          <p style="color: var(--text-dim);">Latest tennis scores from around the world</p>
+          <p style="color: var(--text-dim);">全球网球即时比分</p>
           <span id="news-updated" style="color: var(--text-dim); font-size: 0.85rem;"></span>
         </div>
         <div id="news-content">
